--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -5,17 +5,13 @@ vignette: >
   %\VignetteIndexEntry{Introduction to trophic SDM}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
-
 ---
-
-
-
 
 In this vignette we explain how to fit, evaluate and interpret a trophic species distribution model (trophic SDM). Trophic SDM is a statistical model to model the distribution of species accounting for their known trophic interactions. We refer to Poggiato et al., "Integrating trophic food webs in species distribution models improves ecological niche estimation and prediction", in preparation for the full description of trophic SDM.
 
 ## Install and load webSDM
 
-```r
+``` r
 library(devtools)
 # Run to install webSDM
 # install_github("giopogg/webSDM")
@@ -28,15 +24,15 @@ library(loo)
 set.seed(1234)
 ```
 
-
 ## Simulate data
+
 For illustrative purposes, we use simulated data for which we know the parameter values. We thus simulate a trophic interaction network and species distribution for six species, whose names are ordered accordingly to their trophic level (Y1 being basal and Y6 being at the highest trophic position). We simulate data with a stronger dependence on the abiotic variables for species in lower trophic levels, and increasing dependence on the biotic terms (i.e., their preys) for species with a higher trophic level. We will then use trophic SDM and see if the model can retrieve this simulate process and the species potential niches.
 
 ### Create trophic interaction network
+
 We first create the trophic interaction network. The network needs to be a directed acyclic graph (DAG), with arrows pointing from predator to prey. We thus simulate an interaction network such that species only have prey in a lower trophic position.
 
-
-```r
+``` r
 # Set number of species
 S = 6
 # Create the adjacency matrix of the graph
@@ -63,10 +59,10 @@ plot(G)
 ![plot of chunk simulate_graph](fig/simulate_graph-1.png)
 
 ### Simulate data
+
 We now simulate species distribution at 300 locations along two environmental gradients. We simulate species such that species Y1 to Y3 have a negative dependence to the first environmental variable X_1 and a positive dependence to X_2, viceversa for species Y4 to Y6. Moreover, the strength of the environmental term decreases along the trophic level, while the effect of the prey increases. Finally, preys always have a positive effect on predators.
 
-
-```r
+``` r
 # Number of sites
 n = 500
 
@@ -106,15 +102,14 @@ colnames(Y) = paste0("Y",as.character(1:S))
 ```
 
 ## Fit trophic SDM
-Now that we simulate the data, we can fit a species distribution model with the function `trophicSDM`. The function requires the species distribution data `Y` (a sites x species matrix), the environmental variables `X` and an igraph object `G` representing the trophic interaction network. Importantly, `G` must be acyclic and arrows must point from predator to prey. Finally, the user has to specify a formula for the environmental part of the model and the description of the error distribution and link function to be used in the model (parameter `family`), just as with any `glm`.  
-By default, `trophicSDM` models each species as a function of their prey (set `mode = "predator"` to model species as a function of their predators) and of the environmental variables (as defined in `env.formula`). Trophic SDM can be also fitted as a function of the summary variables of preys (i.e. composite variables like prey richness), instead of each prey species directly. We cover this topic in the vignette 'Composite variables'.  
-The algorithm behind trophic SDM fits a set of generalised linear model (glm), one for each species. These glm can be fitted in the frequentist framework by relying on the function `glm`  (set `method = "glm"`), or in the Bayesian framework by relying on the function `rstanarm` (set `method = "stan_glm"`, the default choice). Model fitting is parallelised if `run.parallel = TRUE`.
-These glm can be penalised to shrink regression coefficients (by default the model is run without penalisation). In the Bayesian framework set `penal = "horshoe"` to implement penalised glm using horshoe prior. In the frequentist framework set `penal = "elasticnet"` to implement penalised glm with elasticnet. See the examples in `?trophicSDM`.
-Hereafter, we only fit trophic SDM in the Bayesian framework with no penalisation. However, all the functions and analyses (except for MCMC diagnostic) presented in this vignette applies straightforwardly with or without penalisation and in the frequentist framework.
+
+Now that we simulate the data, we can fit a species distribution model with the function `trophicSDM`. The function requires the species distribution data `Y` (a sites x species matrix), the environmental variables `X` and an igraph object `G` representing the trophic interaction network. Importantly, `G` must be acyclic and arrows must point from predator to prey. Finally, the user has to specify a formula for the environmental part of the model and the description of the error distribution and link function to be used in the model (parameter `family`), just as with any `glm`.\
+By default, `trophicSDM` models each species as a function of their prey (set `mode = "predator"` to model species as a function of their predators) and of the environmental variables (as defined in `env.formula`). Trophic SDM can be also fitted as a function of the summary variables of preys (i.e. composite variables like prey richness), instead of each prey species directly. We cover this topic in the vignette 'Composite variables'.\
+The algorithm behind trophic SDM fits a set of generalised linear model (glm), one for each species. These glm can be fitted in the frequentist framework by relying on the function `glm` (set `method = "glm"`), or in the Bayesian framework by relying on the function `rstanarm` (set `method = "stan_glm"`, the default choice). Model fitting is parallelised if `run.parallel = TRUE`. These glm can be penalised to shrink regression coefficients (by default the model is run without penalisation). In the Bayesian framework set `penal = "horshoe"` to implement penalised glm using horshoe prior. In the frequentist framework set `penal = "elasticnet"` to implement penalised glm with elasticnet. See the examples in `?trophicSDM`. Hereafter, we only fit trophic SDM in the Bayesian framework with no penalisation. However, all the functions and analyses (except for MCMC diagnostic) presented in this vignette applies straightforwardly with or without penalisation and in the frequentist framework.
 
 Hereafter we model species as a function of preys and the two environmental covariates in the Bayesian framework without penalisation. We though need to specify the parameters of the MCMC chains. We need to decide how many chains to sample (`chains`), how many samples to obtain per chain (`iter`), and if we wish to see the progress of the MCMC sampling (`verbose`).
 
-```r
+``` r
 iter = 1000
 verbose = FALSE
 nchains = 2
@@ -122,7 +117,7 @@ nchains = 2
 
 We are now ready to fit a trophic SDM.
 
-```r
+``` r
 X = data.frame(X_1 = X_1, X_2 = X_2)
 
 m = trophicSDM(Y = Y, X = X, G = G, 
@@ -132,9 +127,10 @@ m = trophicSDM(Y = Y, X = X, G = G,
 ```
 
 ### A trophicSDMfit object
+
 The fitted model `m` is of class `"trophicSDMfit"`. We also show here the formulas used to fit the each glm, where each predator is modeled as a function of the preys and of the environmental variables.
 
-```r
+``` r
 m
 #> ==================================================================
 #> A trophicSDM fit with no penalty, fitted using stan_glm 
@@ -174,15 +170,16 @@ m$form.all
 ```
 
 ## Analyse a fitted trophicSDM
+
 The field `$model` contains all the the single species glm (i.e., all the local models). `$data` and `trophicSDM` contains informations on the data and choices to fit the model respectively. `$form.all` contains the formula used to fit each glm (i.e., both abiotic and biotic terms). `$coef` contains the inferred regression coefficients of the glm for all species. `$AIC` and `$log.lik` are respectively the AIC and log-likelihood of the fitted trophic SDM. Finally, in the Bayesian framework, the field `$mcmc.diag` contains the convergence diagnostic metrics of the MCMC chains for each species.
 
-In this vignette, we first ensure that the MCMC chains correctly converged. Then, we analyse the inferred model, by focusing in particular on the effect of the biotic versus abiotic terms. We then analyse the predictive performances of the model (comparing it to environment-only SDM) and use it to predict the species potential niches. 
+In this vignette, we first ensure that the MCMC chains correctly converged. Then, we analyse the inferred model, by focusing in particular on the effect of the biotic versus abiotic terms. We then analyse the predictive performances of the model (comparing it to environment-only SDM) and use it to predict the species potential niches.
 
 ### MCMC convergence
+
 First, we can have a look at effective sample size to total sample size and of the potential scale reduction factor (aka 'R hat') for each species. Each line corresponds to a given parameter.
 
-
-```r
+``` r
 # Plot mcmc potential scale reduction factor (aka rhat)
 p1 = mcmc_rhat(m$mcmc.diag$rhat)
 # Plot mcmc ratio of effective sample size to total sample size
@@ -193,10 +190,9 @@ grid.arrange(p1, p2, ncol = 2)
 
 ![plot of chunk mcmc-convergence-I](fig/mcmc-convergence-I-1.png)
 
-We observe that the effective sample sizes are very close to the theoretical value of the actual number of samples, as the ratio is close to 1. In few cases the ratio is lower, and we might consider running the chains for longer, or thin them, to improve convergence. This indicates that there is very little autocorrelation among consecutive samples. The potential scale reduction factors are very close to one, which indicates that two chains gave consistent results.
-We can have a closer look to the MCMC chains by looking at the traceplots of the parameters of a given model, for example here for species Y5 who feeds on species Y1, Y2, Y3 and Y4. To do so, we first assess the local model of species Y5, and in particular its field `$model` that gives us the output of the function `stan_glm`. We can then exploit the plot method of this object.
+We observe that the effective sample sizes are very close to the theoretical value of the actual number of samples, as the ratio is close to 1. In few cases the ratio is lower, and we might consider running the chains for longer, or thin them, to improve convergence. This indicates that there is very little autocorrelation among consecutive samples. The potential scale reduction factors are very close to one, which indicates that two chains gave consistent results. We can have a closer look to the MCMC chains by looking at the traceplots of the parameters of a given model, for example here for species Y5 who feeds on species Y1, Y2, Y3 and Y4. To do so, we first assess the local model of species Y5, and in particular its field `$model` that gives us the output of the function `stan_glm`. We can then exploit the plot method of this object.
 
-```r
+``` r
 plot(m$model$Y5$model, "trace")
 ```
 
@@ -205,17 +201,18 @@ plot(m$model$Y5$model, "trace")
 Again, we see that the chains mix very well and that there's little autocorrelation among samples within the same chain.
 
 ### Parameter estimates and interpretation
+
 We now analyse the estimates of the regression coefficients. We can have a first glance of the regression coefficients with the function plot. This function plots the posterior distribution of the regression coefficients of each species.
 
-```r
+``` r
 plot(m)
 ```
 
 ![plot of chunk estimates-I](fig/estimates-I-1.png)
 
-We can visually see that the regression coefficients for the environmental part of the model match the simulated parameters, as species Y1 to Y3 have a positive response to X_1 and a negative one to X_2, viceversa for species Y3 to Y6. We also remark that the environmental coefficients are less important for basal species than for predators. Indeed, the posterior mean of the regression coefficients of the environmental part gets closer to zero and their posterior distribution tend to overlap zero more and more as we move from species Y1 to species Y6.  We can quantify this visual assessment by looking at the posterior mean and quantile of the regression coefficients. The parameter `level` set the probability of the quantile (default 0.95).
+We can visually see that the regression coefficients for the environmental part of the model match the simulated parameters, as species Y1 to Y3 have a positive response to X_1 and a negative one to X_2, viceversa for species Y3 to Y6. We also remark that the environmental coefficients are less important for basal species than for predators. Indeed, the posterior mean of the regression coefficients of the environmental part gets closer to zero and their posterior distribution tend to overlap zero more and more as we move from species Y1 to species Y6. We can quantify this visual assessment by looking at the posterior mean and quantile of the regression coefficients. The parameter `level` set the probability of the quantile (default 0.95).
 
-```r
+``` r
 coef(m, level = 0.9)
 #> $Y1
 #>                  mean         5%       95%
@@ -264,9 +261,9 @@ coef(m, level = 0.9)
 #> Y5           3.69026866  2.1993395 5.4164494
 ```
 
-Notice that regression coefficients are directly available in the field `$coef` of an object trophicSDMfit (with `level = 0.95`). As we previously hinted, we see that the estimate of the regression coefficients of the environmental part get closer and closer to zero with credible interval that often overlap zero (implying they are not significant with a confidence level of 10%) for species with a higher trophic level. In order to be able to correctly quantify the effect of the different predictors across species (i.e., their relative importance), we need to standardise the regression coefficients (see Grace et al. 2018). To do so, we need to set `standardise = TRUE`. 
+Notice that regression coefficients are directly available in the field `$coef` of an object trophicSDMfit (with `level = 0.95`). As we previously hinted, we see that the estimate of the regression coefficients of the environmental part get closer and closer to zero with credible interval that often overlap zero (implying they are not significant with a confidence level of 10%) for species with a higher trophic level. In order to be able to correctly quantify the effect of the different predictors across species (i.e., their relative importance), we need to standardise the regression coefficients (see Grace et al. 2018). To do so, we need to set `standardise = TRUE`.
 
-```r
+``` r
 coef(m, level = 0.9, standardise = T)
 #> $Y1
 #>               estimate         5%        95%
@@ -315,10 +312,10 @@ coef(m, level = 0.9, standardise = T)
 #> Y5           0.17891028  0.1066276  0.2625983
 ```
 
-This results confirms the previous analysis. We can analyse the relative importance of different group of variables with the function `computeVariableImportance`. This function can take as input the definition of groups of variables in the argument `groups` (by default, with `groups = NULL`, each explanatory variable is a different group). The variable importance of groups of variables is computed as the standardised regression coefficients summed across variable of the same group.  
+This results confirms the previous analysis. We can analyse the relative importance of different group of variables with the function `computeVariableImportance`. This function can take as input the definition of groups of variables in the argument `groups` (by default, with `groups = NULL`, each explanatory variable is a different group). The variable importance of groups of variables is computed as the standardised regression coefficients summed across variable of the same group.\
 We hereafter use this function to compute the relative importance of the abiotic versus biotic covariates.
 
-```r
+``` r
 VarImpo = computeVariableImportance(m, 
                                     groups = list("Abiotic" = c("X_1","X_2"),
                                                      "Biotic" = c("Y1","Y2", "Y3", "Y4", "Y5", "Y6")))
@@ -335,7 +332,7 @@ We clearly see that our model correctly retrieved the simulated pattern, with th
 
 Finally, we can visualise the effect of each trophic interactions with the function `plotG_inferred`, which plots the metaweb `G` together with the variable importance (i.e. the standardised regression coefficient) of each link. The parameter `level` sets the confidence level with which coefficients are deemed as significant or non-significant.
 
-```r
+``` r
 plotG_inferred(m, level = 0.9)
 ```
 
@@ -345,9 +342,9 @@ We see that the model correctly retrieves that preys have a posite effect on the
 
 ### Analysis of local models
 
-In order to examine the package and practice with it, we here show how to easily manipulate local models, i.e. each glm (that can be seen as a  single species SDMs), the smallest pieces of trophic SDM. These local models belong to the class "SDMfit", for which multiple methods exists. We hereafter show how to some of these methods for species Y6.
+In order to examine the package and practice with it, we here show how to easily manipulate local models, i.e. each glm (that can be seen as a single species SDMs), the smallest pieces of trophic SDM. These local models belong to the class "SDMfit", for which multiple methods exists. We hereafter show how to some of these methods for species Y6.
 
-```r
+``` r
 SDM = m$model$Y6
 
 # The formula used to fit the model
@@ -360,7 +357,7 @@ plot(SDM)
 
 ![plot of chunk SDMfit](fig/SDMfit-1.png)
 
-```r
+``` r
 
 # The regression coefficients
 coef(SDM, level = 0.9, standardise = T)
@@ -374,7 +371,7 @@ coef(SDM, level = 0.9, standardise = T)
 
 We can also predict the probability of presence of species Y6 at a site with X_1 = 0.5, X_2 = 0.5, assuming its preys to be present present.
 
-```r
+``` r
 preds = predict(SDM, newdata = data.frame(X_1 = 0.5, X_2 = 0.5, Y3 = 1, Y5 = 1))
 
 # Posterior mean of the probability of presence
@@ -386,10 +383,10 @@ We see that the species has a high probability of presence in this environmental
 
 ## Predictions with trophic SDM
 
-We showed how to fit and analyse a trophic SDM and how to predict a single species (Y6 in the previous section), when we can fix the distribution of its prey. However, the distribution of prey is typically unavailable when we want to predict the distribution of species at unobserved sites and/or under future environmental conditions.   Intuitively, in a simple network of two trophic level we would need to predict the prey first and use these predictions to predict the predator. To generalize this idea to complex networks, we predict species following the topological ordering of the metaweb. This order that exists for every DAG guarantees that when predicting a given species, all its prey will have already been predicted.  
+We showed how to fit and analyse a trophic SDM and how to predict a single species (Y6 in the previous section), when we can fix the distribution of its prey. However, the distribution of prey is typically unavailable when we want to predict the distribution of species at unobserved sites and/or under future environmental conditions. Intuitively, in a simple network of two trophic level we would need to predict the prey first and use these predictions to predict the predator. To generalize this idea to complex networks, we predict species following the topological ordering of the metaweb. This order that exists for every DAG guarantees that when predicting a given species, all its prey will have already been predicted.\
 The function `predict` computes the topological order of species, and then predicts them sequentially. As any `predict` function, it takes into account the values of the environmental variables in the argument `Xnew`. We can provide to the function the number of samples from the posterior distribution.
 
-```r
+``` r
 pred = predict(m, Xnew = data.frame(X_1 = 0.5, X_2 = 0.5), pred_samples = 100)
 
 dim(pred$Y2)
@@ -400,8 +397,7 @@ By default, the function `predict` transforms the probability of presence of pre
 
 Pred is a list containing the posterior distribution of the predicted probability of presence of each species (i.e., number of sites x pred_samples). Notice that we can ask the function to directly provide a summary of the posterior distribution (i.e. posterior mean and 95% quantiles) of the probabilities of presence by setting `fullPost = FALSE`. As for `trophicSDM`, we can choose to parallelise some parts of the `predict` function by setting `run.parallel = TRUE` (which can speed up computational times).
 
-
-```r
+``` r
 pred = predict(m, Xnew = data.frame(X_1 = 0.5, X_2 = 0.5), pred_samples = 100, 
                fullPost = FALSE, run.parallel = FALSE)
 
@@ -420,10 +416,10 @@ pred$Y2
 ```
 
 ## Model evaluation
-We now want to evaluate how well the model fits the data and how well it generalises to new data with respect to classical SDM. We thus first run a classical SDM, by providing an empty graph to `trophicSDM`. Then, we will compare model AIC and their predictive performances both on the training data and in cross-validation. Notice that when we compare classical SDM and trophic SDM it is important to account for the fact that trophic SDM have a higher number of parameters, and will therefore have, by default, a higher fit on the the training data. 
 
+We now want to evaluate how well the model fits the data and how well it generalises to new data with respect to classical SDM. We thus first run a classical SDM, by providing an empty graph to `trophicSDM`. Then, we will compare model AIC and their predictive performances both on the training data and in cross-validation. Notice that when we compare classical SDM and trophic SDM it is important to account for the fact that trophic SDM have a higher number of parameters, and will therefore have, by default, a higher fit on the the training data.
 
-```r
+``` r
 empty_graph = graph_from_adjacency_matrix(matrix(0, nrow = S, ncol = S,
                                           dimnames = list(colnames(Y), colnames(Y))))
 m_classic = trophicSDM(Y = Y, X = X,
@@ -431,10 +427,12 @@ m_classic = trophicSDM(Y = Y, X = X,
                        env.formula = "~ I(X_1^2) + I(X_2^2)", family = binomial(link = "logit"), 
                        method = "stan_glm", chains = nchains, iter = iter, verbose = verbose)
 ```
+
 ### AIC, loo
+
 We first compare model AIC and an approximation of the leave-one-out cross-validation log-likelihood (loo, see Vehtari, A. et al 2017). AIC penalises the likelihood of the model as a function of the number of model parameter, while loo approximate the likelihood of the model on leave-one out cross validation. Therefore, both these metrics can be used to correctly compare the two approaches
 
-```r
+``` r
 
 m$AIC
 #> [1] 1455.775
@@ -452,9 +450,10 @@ loo(m_classic)
 We see that our trophic model has a lower AIC and a higher loo, which proves that including prey improves the model.
 
 ### Interpolation
+
 We now compare the predictive performance of the two approaches on the training dataset. To do so, we first use the function `predict`, and then the function `evaluateModelFit` to compare how well predictions match the true data.
 
-```r
+``` r
 
 # Trophic SDM (when Xnew is not specified, predictions are carried on
 # the training dataset by setting Xnew = m$data$X)
@@ -490,10 +489,10 @@ mean(metrics_classic$tss)
 On the training dataset models have similar performances, with our trophic model that slightly improves SDM's TSS.
 
 ### Cross-validation
+
 We now compare the two approaches in K-fold cross validation with the function `trophicSDM_CV`. This function creates a partition based on the specified number of fold (but can also takes a user-specified partition in the argument `partition`) and run a cross validation. This can take a bit of time. Set `run.parallel = TRUE` if you want to reduce computation time.
 
-
-```r
+``` r
 # 3-fold cross validation
 CV = trophicSDM_CV(m, K = 3, prob.cov = T, iter = 2000,
                    pred_samples = 500, run.parallel = FALSE)
@@ -538,11 +537,11 @@ mean(metrics_classic$tss)
 
 The increase in mean AUC and TSS is even higher in 3-fold cross-validation than on the fitted data. As we simulated the data with a strong biotic signal, trophic SDM proves to be a better tool than classic SDM.
 
-
 ## Potential niche
+
 We also implemented a function to predict species potential niches, defined as the probability of presence of species along the environmental gradient when the biotic constrain is realised, i.e., when all its prey are set to present (vice-versa, when modeling species top-down, when the predator are absent). We here compute the probability of presence of species at environmental conditions X_1= 0.5, X_2 = 0.5 when the preys are available.
 
-```r
+``` r
 preds = predictPotential(m, Xnew = data.frame(X_1 = 0.5, X_2 = 0.5))
 #> Error in predictPotential(m, Xnew = data.frame(X_1 = 0.5, X_2 = 0.5)): could not find function "predictPotential"
 # Take the posterior mean
@@ -556,9 +555,11 @@ lapply(preds,mean)
 ```
 
 ## Author
+
 This package is currently developed by Giovanni Poggiato from Laboratoire d’Ecologie Alpine. It is supported by the ANR GAMBAS. The framework implemented in this package is described in: "Integrating trophic food webs in species distribution models improves ecological niche estimation and prediction" Poggiato Giovanni, Jérémy Andréoletti, Laura J. Pollock and Wilfried Thuiller. In preparation.
 
 ## References
+
 Grace, J. B., Johnson, D. J., Lefcheck, J. S., and Byrnes, J. E. K.. 2018. Quantifying relative importance: computing standardized effects in models with binary outcomes. Ecosphere 9(6):e02283.
 
 Vehtari, A., Gelman, A., and Gabry, J. (2017). Practical Bayesian model evaluation using leave-one-out cross-validation and WAIC. Statistics and Computing. 27(5), 1413–1432.
